increased z-index because of lolesports, fixes #39

--- a/app/css/all.scss
+++ b/app/css/all.scss
@@ -27,7 +27,7 @@
   position: fixed;
   top: 0px;
   left: 0px;
-  z-index: 10002; // linked-in uses 10001
+  z-index: 4000000; // lolesports uses 3000000
   transition: opacity 0.5s;
   overflow-y: scroll;
 
